--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "To do list to manage times",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/mesielepush/To_Do_list/issues"
   },
-  "homepage": "https://github.com/mesielepush/To_Do_list#readme"
+  "homepage": "https://github.com/mesielepush/To_Do_list#readme",
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
